--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,18 @@
 
 body{
   background-color: var(--fundo) !important;
-  color: none;
+  color: none;  padding-right: 0 !important;
+
 }
+
+@media (max-width: 991px) {
+    
+  body{
+    padding-right: 0 !important;
+  }
+
+}
+
 
 @media (min-width: 992px) {
     
